# moviescrapper

./: .gitignore  README.md  backup.sql  docker-compose.yml  pyproject.toml  scrapper.py  test.py
DataCollect/: Movie.py
DataCollect/Scripts/: GetCinemarkData.py  GetCinemasData.py  GetCinepolisData.py  GetCinepolisData_v2  GetCinepolisData_v2.py  app.py  data_collect.py
DataCollect/Scripts/templates/: index.html
api/: app.py
