[tool.poetry]
name = "moviescrapper"
version = "0.1.0"
description = ""
authors = ["Esperanza Dueñas <esperanzaduenas008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.0"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
